test/integration/page-config/pages/invalid/import-export.js
// eslint-disable-next-line no-unused-vars
import { config } from '../../config'

const ImportExport = () => <p>hello world</p>

// export { config }

export default ImportExport
